# umirhack-2026

./: .env.example  .gitignore  Makefile  README.md  compose.override.yaml.example  compose.yaml  implementation.md  whitepaper.md
.githooks/: pre-commit
artifacts/: .dockerignore  Dockerfile
python/: .env.example  alembic-entrypoint.sh  alembic.ini  cron-update-geoip  prepare_test_db.py  pyproject.toml  run-integration-tests.sh  run-rest-server-test.sh
python/src/hack_agent/checks/: runtime.py
python/src/hack_agent/rest_server/routers/: check.py
python/src/hack_backend/alembic/versions/: 0a1b2c3d4e5f_add_api_key_table.py  140f8250dfe5_upd.py  441783341046_upd.py  8a7e6f5d4c3b_add_agent_safe_install.py  91b4f6d2a7c1_add_reported_agent_version.py  a6d9c3f8b1e2_add_compliance_tables.py  b2e3f4a5c6d7_project_invite_token.py  b8c1d4e7f9a2_refactor_compliance_history.py  c4a8d7e2f1b0_add_agent_max_concurrent_tasks.py  d63308f075c8_make_username_unique.py  d9af453b86a5_initial.py  dce0f45aceb2_initial.py  e4f2a6b7c8d9_merge_api_key_and_compliance_heads.py  e5a9b8c7d6f0_add_email_verification_to_user.py  ee4c9e9f1f6a_email_verification_codes.py  f3c1d2e4a5b6_password_change_pending.py  f6a7b8c9d0e1_add_schedule_rule_name.py
python/src/hack_backend/bindingd/: main.py
python/src/hack_backend/core/: agent_connector.py  compliance.py  compliance_notifications.py  database.py  entity_resolution.py  platform_ops.py  providers.py  security.py
python/src/hack_backend/core/main/: tasks_daemon.py
python/src/hack_backend/core/models/: __init__.py  agent.py  agent_bootstrap_token.py  agent_keypair.py  api_key.py  check.py  compliance.py  enums.py  environment.py  graph_edge.py  host.py  login_session.py  members.py  metric_snapshot.py  project.py  resource.py  schedule_rule.py  task_run.py  task_run_result.py  task_template.py  telemetry_record.py  user.py
python/src/hack_backend/core/models/check_task/: __init__.py
python/src/hack_backend/core/services/: access.py  agent.py  agent_runtime_service.py  agent_versioning.py  compliance_service.py  email.py  email_verification.py  platform_service.py  providers.py
python/src/hack_backend/heartbeatd/: main.py
python/src/hack_backend/integration_tests/: api_templates.py  base.py  test_access.py  test_agents.py  test_checks.py
python/src/hack_backend/rest_server/: agent_install.py  app.py  compliance_notifications.py  dependencies.py  exception_handlers.py  providers.py  serializers.py
python/src/hack_backend/rest_server/models/: config.py
python/src/hack_backend/rest_server/routers/: __init__.py  access.py  agent_api.py  agents.py  api_keys.py  compliance.py  dev_router.py  email_verification.py  environments.py  hosts.py  projects.py  schedule_rules.py  task_runs.py  task_templates.py  user_settings.py
python/src/hack_backend/rest_server/schemas/: base.py  platform.py
python/src/hack_backend/tasksd/: broker.py  email_tasks.py  main.py  tasks.py
python/src/hack_backend/utils/: otp_utils.py
python/src/hack_protocol/: agent_api.py
python/src/hack_protocol/checks/: base.py  dns.py  nmap.py  ping.py  tcp_and_udp.py  unions.py
python/tests/integration/: conftest.py  test_agent_protocol.py  test_api_keys.py  test_auth_and_projects.py  test_compliance_policies.py
python/tests/unit/: test_agent_install_urls.py  test_agent_status_refresh.py  test_builtin_task_templates.py  test_compliance.py  test_compliance_email_notifications.py  test_email_verification_service.py  test_host_projection.py  test_schedule_rule_expansion.py  test_serializers.py
rust/hack_agent/: Cargo.toml
rust/hack_agent/src/: api.rs  config.rs  main.rs  models.rs  state.rs  tasks.rs
(+135 files in other folders)
