[project]
name = "hack"
version = "0.1.0"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "alembic",
    "ruff",
    "pytest",
    "requests",
    "deepdiff",
    "authx",
    "argon2-cffi",
    "jsonschema (>=4.25.0,<5.0.0)",
    "ping3 (>=5.1.5,<6.0.0)",
    "python3-nmap (>=1.9.1,<2.0.0)",
    "pydig (>=0.4.0,<0.5.0)",
    "geoip2 (>=5.1.0,<6.0.0)",
    "redis (<7)",
    "asyncssh (>=2.21.1,<3.0.0)",
    "scapy (>=2.6.1,<3.0.0)",
    "taskiq (>=0.11.19,<0.12.0)",
    "taskiq-redis (>=1.1.2,<2.0.0)",
    "validators (>=0.35.0,<0.36.0)",
    "aiodns (>=3.5.0,<4.0.0)",
    "httpx>=0.28.1",
    "pyotp>=2.9.0",
    "resend>=2.0.0",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
run-rest-server = "hack_backend.rest_server.main.run_rest_server:main"
run-tasksd = "hack_backend.tasksd.main:main"
run-bindingd = "hack_backend.bindingd.main:main"
run-agent-rest-server = "hack_agent.rest_server.main.run_rest_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hack_agent*", "hack_backend*", "hack_protocol*"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src"]
extend-exclude = ["alembic", "dist", "src/hack.egg-info"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pycodestyle syntax/runtime-safe subset
    "E4",
    "E7",
    "E9",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
