[project]
name = "hack"
version = "0.1.0"
requires-python = ">=3.12, <4.0"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "alembic",
    "ruff",
    "pytest",
    "argon2-cffi",
    "jsonschema (>=4.25.0,<5.0.0)",
    "redis (<7)",
    "taskiq (>=0.11.19,<0.12.0)",
    "taskiq-redis (>=1.1.2,<2.0.0)",
    "httpx>=0.28.1",
    "pyotp>=2.9.0",
    "resend>=2.0.0",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
run-rest-server = "hack_backend.rest_server.main.run_rest_server:main"
run-worker = "hack_backend.core.main.tasks_daemon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hack_backend*"]

[tool.ruff]
line-length = 79
target-version = "py312"
src = ["src"]
extend-exclude = ["alembic", "dist", "src/hack.egg-info"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pycodestyle syntax/runtime-safe subset
    "E4",
    "E7",
    "E9",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]
