[package]
name = "hack_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
tokio = { version = "1.48", features = ["fs", "macros", "net", "process", "rt-multi-thread", "test-util", "time"] }
url = "2.5"
which = "8.0"
